--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "firebase": "8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "rsuite": "^4.8.4",
     "rxjs": "^6.6.3",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
